@@ -14,6 +14,8 @@ mlr_new:
 
 - new functions
 -- getBMRModels
+- added wrapper that adds support for classification problems that have only a
+  single label or very sparse labels learners (ConstantClassWrapper)
 
 new learners
 -- classif.randomForestSRCSyn
